unpackaged/main/default/objects/pse__Assignment_Settings__c/pse__Assignment_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Assignment Settings</label>
</CustomObject>