unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Adjust_Hours_Strategy_Respects_Holidays__c.field-meta.xml
<CustomField>
    <fullName>pse__Adjust_Hours_Strategy_Respects_Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If it is true, then Schedules created by "Adjust Hours Per Day" will respect holidays and create exceptions for them and adjust hours by spreading hours across other days.</description>
    <inlineHelpText>If it is true, then Schedules created by "Adjust Hours Per Day" will respect holidays and create exceptions for them and adjust hours by spreading hours across other days.</inlineHelpText>
    <label>Adjust Hours Strategy Respects Holidays</label>
    <type>Checkbox</type>
</CustomField>