unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Allow_Resource_Currency_on_Assignment__c.field-meta.xml
<CustomField>
    <fullName>pse__Allow_Resource_Currency_on_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the cost rate currency code on an assignment is set to use the resource currency code.</description>
    <inlineHelpText>If selected, the cost rate currency code on an assignment is set to use the resource currency code.</inlineHelpText>
    <label>Allow Resource Currency Code on Assn</label>
    <type>Checkbox</type>
</CustomField>