unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Assignment_Name_Resource_Name_Max_Length__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment_Name_Resource_Name_Max_Length__c</fullName>
    <defaultValue>38</defaultValue>
    <description>Configuration of Max-Length of Resource Name in auto generated Assignment Name.</description>
    <inlineHelpText>Configuration of Max-Length of Resource Name in auto generated Assignment Name.</inlineHelpText>
    <label>Assignment Name Resource Name Max Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>