unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Auto_Share_with_New_Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Auto_Share_with_New_Resource__c</fullName>
    <description>Defines whether to share an assignment and schedule with the resource's Salesforce user on creation or when the resource is changed. You can set the value to Read or Edit to define the level of sharing. If no value is set, no action is taken.</description>
    <inlineHelpText>Defines whether to share an assignment and schedule with the resource's Salesforce user on creation or when the resource is changed. You can set the value to Read or Edit to define the level of sharing. If no value is set, no action is taken.</inlineHelpText>
    <label>Auto Share with New Resource</label>
    <length>5</length>
    <type>Text</type>
</CustomField>