unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Default_Scheduling_Strategy__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Scheduling_Strategy__c</fullName>
    <description>Indicates the default scheduling strategy displayed in the Assign Resource to Project window. Valid values are:
Adjust Hours Per Day
Calculate End Date, Level Schedule
Calculate End Date, Ignore Availability
Custom
Percent Allocation
Zero Hour Schedule</description>
    <inlineHelpText>Indicates the default scheduling strategy displayed in the Assign Resource to Project window. Valid values are:
Adjust Hours Per Day
Calculate End Date, Level Schedule
Calculate End Date, Ignore Availability
Custom
Percent Allocation
Zero Hour Schedule</inlineHelpText>
    <label>Default Scheduling Strategy</label>
    <length>60</length>
    <type>Text</type>
</CustomField>