unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Edit_Schedule_Default_Strategy__c.field-meta.xml
<CustomField>
    <fullName>pse__Edit_Schedule_Default_Strategy__c</fullName>
    <defaultValue>'ignore'</defaultValue>
    <description>The default scheduling strategy for the Edit Assignment Schedule page. Possible values are "level", "ignore", "day" and ''PercentAllocation" for "Calculate End Date, Level Schedule", "Calculate End Date, Ignore Availability", "Adjust Hours Per Day" and "Percent Allocation" respectively</description>
    <inlineHelpText>The default scheduling strategy for the Edit Assignment Schedule page. Possible values are "level", "ignore", "day" and ''PercentAllocation"</inlineHelpText>
    <label>Edit Schedule Default Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>