unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Hide_Percent_Alloc_Scheduling_Strategy__c.field-meta.xml
<CustomField>
    <fullName>pse__Hide_Percent_Alloc_Scheduling_Strategy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Percent Allocation scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</description>
    <inlineHelpText>Indicates whether the Percent Allocation scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</inlineHelpText>
    <label>Hide Percent Alloc Scheduling Strategy</label>
    <type>Checkbox</type>
</CustomField>