unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Hide_Zero_Hour_Scheduling_Strategy__c.field-meta.xml
<CustomField>
    <fullName>pse__Hide_Zero_Hour_Scheduling_Strategy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Zero Hour Schedule scheduling strategy is hidden on the Assign Resource to Project and Staffer Worksheet pages.</description>
    <inlineHelpText>Indicates whether the Zero Hour Schedule scheduling strategy is hidden on the Assign Resource to Project and Staffer Worksheet pages.</inlineHelpText>
    <label>Hide Zero Hour Scheduling Strategy</label>
    <type>Checkbox</type>
</CustomField>