unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Link_Assignment_Header_Tooltip_Fields__c.field-meta.xml
<CustomField>
    <fullName>pse__Link_Assignment_Header_Tooltip_Fields__c</fullName>
    <defaultValue>"Assignment_Number__c,Project__r.Name,Resource__r.Name,Is_Billable__c,Start_Date__c,End_Date__c,Scheduled_Hours__c"</defaultValue>
    <description>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Assignment to Milestones page.</description>
    <inlineHelpText>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Assignment to Milestones page.</inlineHelpText>
    <label>Link Assignment Header Tooltip Fields</label>
    <type>TextArea</type>
</CustomField>