unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Mass_Assign_Milestone_Required__c.field-meta.xml
<CustomField>
    <fullName>pse__Mass_Assign_Milestone_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true the Milestone field must be completed for each assignment to be created on the Mass Assign Projects to Resource page and the Mass Assign Resources to Project page.</description>
    <inlineHelpText>When true the Milestone field must be completed for each assignment to be created on the Mass Assign Projects to Resource page and the Mass Assign Resources to Project page.</inlineHelpText>
    <label>Mass Assign Milestone Required</label>
    <type>Checkbox</type>
</CustomField>