unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Multi_Assign_Milestone_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Multi_Assign_Milestone_Fieldset_Name__c</fullName>
    <defaultValue>"LinkAssignmentMilestoneColumns"</defaultValue>
    <description>Allows users to create a custom fieldset on the Milestone object and write the fieldset's API name to this custom setting. Fields added to this fieldset are displayed as read-only fields on the Multi Assigned Assignment to Milestone UI.</description>
    <inlineHelpText>Allows users to create a custom fieldset on the Milestone object and write the fieldset's API name to this custom setting. Fields added to this fieldset are displayed as read-only fields on the Multi Assigned Assignment to Milestone UI.</inlineHelpText>
    <label>Multi Assign Milestone Fieldset Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>