unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Retain_Schedule_On_Assign__c.field-meta.xml
<CustomField>
    <fullName>pse__Retain_Schedule_On_Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When True, an existing schedule held on a resource request is reused for a subsequent assignment on that request rather than creating a new schedule for the assignment. The default value is False.</description>
    <inlineHelpText>When True, an existing schedule held on a resource request is reused for a subsequent assignment on that request rather than creating a new schedule for the assignment. The default value is False.</inlineHelpText>
    <label>Retain Schedule On Assign</label>
    <type>Checkbox</type>
</CustomField>