unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Role_Required_On_Creation__c.field-meta.xml
<CustomField>
    <fullName>pse__Role_Required_On_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default false/UN-checked, current behavior continues (role pick list optional). If checked will make the Role pick list required and add the usual vertical red stripe to the left side of the field to indicate that it is required.</description>
    <label>Role Required On Creation</label>
    <type>Checkbox</type>
</CustomField>