unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Timecard_Statuses__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard_Statuses__c</fullName>
    <defaultValue>'Submitted,Approved'</defaultValue>
    <inlineHelpText>The comma-delimited list of the Timecard Status field values to use when performing timecard calculations for the Edit Assignment Schedule page.</inlineHelpText>
    <label>Timecard Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>