unpackaged/main/default/objects/pse__Assignment_Settings__c/fields/pse__Update_Project_Monitor_Fields_Sync_Limit__c.field-meta.xml
<CustomField>
    <fullName>pse__Update_Project_Monitor_Fields_Sync_Limit__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>Defines the threshold number of assignments for immediately calculating Project Monitor fields. If the number of assignments exceeds the value of this setting, Project Monitor fields are calculated using a batch process.</description>
    <inlineHelpText>Defines the threshold number of assignments for immediately calculating Project Monitor fields. If the number of assignments exceeds the value of this setting, Project Monitor fields are calculated using a batch process.</inlineHelpText>
    <label>Update Project Monitor Fields Sync Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>